tests/new_env/new_env.exp
Error --------------------------------------------------------------------------------------------------- globals.js:4:2

Cannot cast `x` to empty because undefined [1] is incompatible with empty [2]. [incompatible-cast]

   globals.js:4:2
   4| (x: empty);
       ^

References:
   globals.js:3:9
   3| var x = undefined;
              ^^^^^^^^^ [1]
   globals.js:4:5
   4| (x: empty);
          ^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- globals.js:6:2

Cannot cast `y` to empty because `Promise` [1] is incompatible with empty [2]. [incompatible-cast]

   globals.js:6:2
   6| (y: empty);
       ^

References:
   globals.js:5:9
   5| var y = new Promise();
              ^^^^^^^^^^^^^ [1]
   globals.js:6:5
   6| (y: empty);
          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- havoc.js:8:2

Cannot cast `ya` to number because uninitialized variable [1] is incompatible with number [2]. [incompatible-cast]

   havoc.js:8:2
   8| (ya: number)
       ^^

References:
   havoc.js:7:5
   7| var ya: number;
          ^^ [1]
   havoc.js:8:6
   8| (ya: number)
           ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ initialize.js:8:2

Cannot cast `x` to number because uninitialized variable [1] is incompatible with number [2]. [incompatible-cast]

   initialize.js:8:2
   8| (x: number); // error
       ^

References:
   initialize.js:3:5
   3| var x;
          ^ [1]
   initialize.js:8:5
   8| (x: number); // error
          ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- initialize.js:21:2

Cannot cast `y` to number because possibly uninitialized variable [1] is incompatible with number [2].
[incompatible-cast]

   initialize.js:21:2
   21| (y: number); // error
        ^

References:
   initialize.js:12:5
   12| var y;
           ^ [1]
   initialize.js:21:5
   21| (y: number); // error
           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- initialize.js:29:2

Cannot cast `w` to number because uninitialized variable [1] is incompatible with number [2]. [incompatible-cast]

   initialize.js:29:2
   29| (w: number);
        ^

References:
   initialize.js:24:7
   24|   var w ;
             ^ [1]
   initialize.js:29:5
   29| (w: number);
           ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- loops.js:10:24

Cannot assign `x` to `y` because boolean [1] is incompatible with number [2]. [incompatible-type]

   loops.js:10:24
   10|         var y:number = x; // error: boolean !~> number
                              ^

References:
   loops.js:6:23
    6|     var x = b ? null: false;
                             ^^^^^ [1]
   loops.js:10:15
   10|         var y:number = x; // error: boolean !~> number
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- loops.js:12:20

Cannot assign `z` to `w` because possibly uninitialized variable [1] is incompatible with number [2].
[incompatible-type]

   loops.js:12:20
   12|     var w:number = z; // 2 errors: ?string !~> number
                          ^

References:
   loops.js:7:9
    7|     var z;
               ^ [1]
   loops.js:12:11
   12|     var w:number = z; // 2 errors: ?string !~> number
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- loops.js:12:20

Cannot assign `z` to `w` because string [1] is incompatible with number [2]. [incompatible-type]

   loops.js:12:20
   12|     var w:number = z; // 2 errors: ?string !~> number
                          ^

References:
   loops.js:9:30
    9|         if (x == null) { z = ""; break; }
                                    ^^ [1]
   loops.js:12:11
   12|     var w:number = z; // 2 errors: ?string !~> number
                 ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- refi.js:24:4

Cannot cast `y` to empty because number literal `42` [1] is incompatible with empty [2]. [incompatible-cast]

   refi.js:24:4
   24|   (y: empty);
          ^

References:
   refi.js:5:8
    5| var z: mixed = 100;
              ^^^^^ [1]
   refi.js:24:7
   24|   (y: empty);
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- refi.js:24:4

Cannot cast `y` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   refi.js:24:4
   24|   (y: empty);
          ^

References:
   refi.js:10:7
   10|   x = 42
             ^^ [1]
   refi.js:24:7
   24|   (y: empty);
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- refi.js:24:4

Cannot cast `y` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   refi.js:24:4
   24|   (y: empty);
          ^

References:
   refi.js:21:9
   21|     y = 100;
               ^^^ [1]
   refi.js:24:7
   24|   (y: empty);
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:11:7

Cannot assign `x` to `y` because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:11:7
   11|   y = x;
             ^

References:
   test.js:5:18
    5| var x = c ? 42 : "a'";
                        ^^^^ [1]
   test.js:7:9
    7| var y = 42
               ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:14:2

Cannot cast `y` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:14:2
   14| (y: number);
        ^

References:
   test.js:5:18
    5| var x = c ? 42 : "a'";
                        ^^^^ [1]
   test.js:14:5
   14| (y: number);
           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:19:5

Cannot assign `'a'` to `z` because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:19:5
   19| z = 'a';
           ^^^ [1]

References:
   test.js:17:5
   17| z = 42;
           ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:26:6

Cannot assign `"hello world"` to `a2` because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:26:6
   26| a2 = "hello world";
            ^^^^^^^^^^^^^ [1]

References:
   test.js:22:10
   22| var a1 = 42;
                ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:28:2

Cannot cast `a2` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:28:2
   28| (a2: number);
        ^^

References:
   test.js:26:6
   26| a2 = "hello world";
            ^^^^^^^^^^^^^ [1]
   test.js:28:6
   28| (a2: number);
            ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:32:10

Cannot return `x` because number [1] is incompatible with string [2]. [incompatible-return]

   test.js:32:10
   32|   return x;
                ^

References:
   test.js:31:15
   31| function f(x: number): string {
                     ^^^^^^ [1]
   test.js:31:24
   31| function f(x: number): string {
                              ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:2

Cannot call `f` because function [1] requires another argument. [incompatible-call]

   test.js:35:2
   35| (f(): string);
        ^

References:
   test.js:31:1
   31| function f(x: number): string {
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:38:2

Cannot cast `ya` to number because uninitialized variable [1] is incompatible with number [2]. [incompatible-cast]

   test.js:38:2
   38| (ya: number)
        ^^

References:
   test.js:37:5
   37| var ya: number;
           ^^ [1]
   test.js:38:6
   38| (ya: number)
            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:39:6

Cannot assign `"a"` to `ya` because string [1] is incompatible with number [2]. [incompatible-type]

   test.js:39:6
   39| ya = "a"
            ^^^ [1]

References:
   test.js:37:9
   37| var ya: number;
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:42:10

Cannot return `y.foo` because mixed [1] is incompatible with string [2]. [incompatible-return]

   test.js:42:10
   42|   return y.foo;
                ^^^^^

References:
   test.js:45:33
   45| function foo(x: {[key: string]: mixed}) {
                                       ^^^^^ [1]
   test.js:41:18
   41| function bar(y): string {
                        ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:51:6

Cannot assign `y` to `x2` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:51:6
   51| x2 = y;
            ^

References:
   test.js:7:9
    7| var y = 42
               ^^ [1]
   test.js:31:24
   31| function f(x: number): string {
                              ^^^^^^ [2]



Found 23 errors
